--- a/OpenBench/static/style.css
+++ b/OpenBench/static/style.css
@@ -1,7 +1,7 @@
 
 a:link, a:visited, a:hover, a:active {
     text-decoration: none;
-    color: #8BBAD6;
+    color: #6FBCCE;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
 
     --color-font1: #DBDEE1;
     --color-font2: #949BA4;
-    --color-font3: #008F11;
+    --color-font3: #3FA2B9;
 
     background-color: var(--color1);
 
