--- a/Templates/OpenBench/base.html
+++ b/Templates/OpenBench/base.html
@@ -162,8 +162,11 @@
                         <i class="fa-solid fa-bars fa-fw"></i>
                     </button>
                     <h2>
-                        <a class="site-title" href="/">OpenBench&nbsp;Testing&nbsp;Framework</a>
+                        <a class="site-title" href="/">FuryBench&nbsp;Testing&nbsp;Framework</a>
                     </h2>
+                    <h5 style="color: #DBDEE1">
+                        Home to Integral, PlentyChess, Obsidian, Caissa, Quanticade, Serendipity, Spaghet, Schoenemann, Clarity, and Illumina
+                    </h5>
                 </div>
 
                 {% if request.session.error_message %}
