--- a/Templates/OpenBench/base.html
+++ b/Templates/OpenBench/base.html
@@ -164,7 +164,7 @@
                     <h2>
                         <a class="site-title" href="/">FuryBench&nbsp;Testing&nbsp;Framework</a>
                     </h2>
-                    <h5 style="color: #DBDEE1">
+                    <h5 style="color: #DBDEE1; font-weight: normal">
                         Home to Integral, PlentyChess, Obsidian, Caissa, Quanticade, Serendipity, Spaghet, Schoenemann, Clarity, and Illumina
                     </h5>
                 </div>
