--- a/Templates/OpenBench/Blocks/testsummary.html
+++ b/Templates/OpenBench/Blocks/testsummary.html
@@ -3,7 +3,7 @@
 <td>{{test.dev_engine}}</td>
 <td>
     <a href="{{test|workload_url}}">{{test|prettyDevName}}</a>
-    {% if test.error %} <span style="color: red; cursor: pointer" title="Crash or illegal move">*</span> {% endif %}
+    {% if test.error %} <span style="color: #ff6f6f; cursor: pointer" title="Crash or illegal move">*</span> {% endif %}
     {% if test|test_is_fischer %} <span style="color: green; cursor: pointer" title="Fischer random chess">*</span> {% endif %}
 </td>
 <td class="textcenter"><a href="{{test|gitDiffLink}}">diff</a></td>
