--- a/Templates/OpenBench/base.html
+++ b/Templates/OpenBench/base.html
@@ -166,7 +166,7 @@
                     </h2>
                 </div>
 
-                <h5 style="color: #DBDEE1; font-weight: normal">
+                <h5 style="color: #DBDEE1; font-weight: normal; overflow-x: scroll">
                     Home to Integral, PlentyChess, Obsidian, Caissa, Quanticade, Serendipity, Spaghet, Schoenemann, Clarity, and Illumina
                 </h5>
 
